Fixed for extended languages documentation