@@ -29,7 +29,9 @@ Note that the HTTP REST endpoint will also be enabled
 ```shell
 start locator --name=locator --initial-heap=1g --max-heap=1g --J=-Dgemfire.statistic-archive-file=locator.gfs --J=-D-gemfire.statistic-sampling-enabled=true --J=-Dgemfire.archive-disk-space-limit=5 --J=-Dgemfire.archive-file-size-limit=1 --J=-Dgemfire.conserve-sockets=false
 configure pdx --read-serialized=true --disk-store=DEFAULT
-start server --name=server1 --locators=localhost[10334] --J=-XX:+UseG1GC --J=-XX:+PrintGCDetails --J=-XX:MaxGCPauseMillis=40  --J=-Xms3g --J=-Xmx3g   --use-cluster-configuration=true  --compatible-with-redis-bind-address=localhost --compatible-with-redis-port=6379 --compatible-with-redis-password=CHANGEME --start-rest-api=true --http-service-port=8000 --http-service-bind-address=localhost --statistic-archive-file=server1.gfs --J=-Dgemfire.log-disk-space-limit=3   --J=-Dgemfire.log-file-size-limit=1 --J=-Dgemfire.statistic-archive-file=server1.gfs --J=-D-gemfire.statistic-sampling-enabled=true  --J=-Dgemfire.archive-file-size-limit=1 --J=-Dgemfire.conserve-sockets=false  
+
+start server --name=server1 --locators=localhost[10334] --J=-XX:+UseG1GC  --J=-Xms3g --J=-Xmx3g   --use-cluster-configuration=true  --compatible-with-redis-bind-address=localhost --compatible-with-redis-port=6379 --compatible-with-redis-password=CHANGEME --start-rest-api=true --http-service-port=8000 --http-service-bind-address=localhost --statistic-archive-file=server1.gfs --J=-Dgemfire.log-disk-space-limit=3   --J=-Dgemfire.log-file-size-limit=1 --J=-Dgemfire.statistic-archive-file=server1.gfs --J=-D-gemfire.statistic-sampling-enabled=true  --J=-Dgemfire.archive-file-size-limit=1 --J=-Dgemfire.conserve-sockets=false
+  
 ```
 
 
